# nautilus-pdf-converter

./: .clang-format  CMakeLists.txt  nautilus-copy-as-path.py  nautilus-copy-as-uri.py  nautilus-pdf-converter.cpp  nautilus-pdf-converter.h  nautilus-pdf-converter.py  update-translations.py
debian/: .gitignore  changelog  control  nautilus-copy-as-path.install  nautilus-copy-as-uri.install  nautilus-pdf-converter.install  rules
locales/de/LC_MESSAGES/: nautilus-copy-as-path.po  nautilus-copy-as-uri.po  nautilus-pdf-converter.po
